# sandkasten

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  docker-compose.yml  flake.nix  install-vm.sh  release.toml  renovate.json
.github/: codecov.yml  dependabot.yml
.github/workflows/: automerge.yml  build.yml  check.yml  docker.yml  flake_update.yml  ghcr_clean.yml  notify-release.yml  test.yml
client/: Cargo.toml  README.md
client/src/: lib.rs
client/src/schemas/: configuration.rs  environments.rs  mod.rs  programs.rs
nix/: default.nix  docker.nix  lib.nix  nixos.nix  rust.nix  sandkasten.nix
nix/dev/: packages.nix  shell.nix
nix/nixos/: module.nix  vm.nix
nix/nixos/vm/: configuration.nix  flake.nix  hardware-configuration.nix  sandkasten.nix
nix/time/: default.nix  precision.patch
src/: api.rs  api_description.md  config.rs  environments.rs  lib.rs  main.rs  metrics.rs  program.rs  sandbox.rs  schemas.rs
src/api/: configuration.rs  environments.rs  mod.rs  programs.rs
src/program/: build.rs  mod.rs  prune.rs  run.rs
src/schemas/: environments.rs  mod.rs  programs.rs
tests/: api.rs  async_client.rs  attacks.rs  config.rs  packages.rs  proptests.proptest-regressions  proptests.rs
tests/common/: mod.rs
