[workspace]
members = [".", "client"]

[workspace.dependencies]
serde = { version = "1.0.192", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.108", default-features = false, features = ["std"] }
thiserror = { version = "1.0.50", default-features = false }
uuid = { version = "1.5.0", default-features = false, features = ["v4", "fast-rng", "serde"] }

[package]
name = "sandkasten"
version = "0.1.7"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std"] }
config = { version = "0.13.3", default-features = false, features = ["toml", "json"] }
fnct = { version = "0.6.1", default-features = false }
key-rwlock = { version = "0.1.2", default-features = false }
once_cell = { version = "1.18.0", default-features = false }
poem = { version = "1.3.58", default-features = false, features = ["server", "anyhow"] }
poem-ext = { version = "0.10.0", default-features = false, features = ["shield"] }
poem-openapi = { version = "3.0.5", default-features = false, features = ["swagger-ui", "redoc", "uuid"] }
postcard = { version = "1.0.8", default-features = false, features = ["use-std"] }
prometheus = { version = "0.13.3", default-features = false }
redis = { version = "0.23.3", default-features = false, features = ["tokio-comp", "connection-manager"] }
regex = "1.10.2"
sandkasten-client = { path = "client", default-features = false, features = ["poem-openapi"] }
serde.workspace = true
serde_json.workspace = true
sha2 = { version = "0.10.8", default-features = false }
thiserror.workspace = true
tokio = { version = "1.34.0", default-features = false, features = ["rt-multi-thread", "macros", "process", "time"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi"] }
url = { version = "2.4.1", default-features = false, features = ["serde"] }
uuid.workspace = true

[dev-dependencies]
indoc = { version = "2.0.4", default-features = false }
proptest = "1.4.0"
sandkasten-client = { path = "client", default-features = false, features = ["reqwest", "blocking"] }

[features]
nix = []
test_api = []
