[workspace]
members = [".", "client"]

[workspace.dependencies]
serde = { version = "1.0.196", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.115", default-features = false, features = ["std"] }
thiserror = { version = "1.0.58", default-features = false }
uuid = { version = "1.8.0", default-features = false, features = ["v4", "fast-rng", "serde"] }

[package]
name = "sandkasten"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.81", default-features = false, features = ["std"] }
config = { version = "0.14.0", default-features = false, features = ["toml", "json"] }
fnct = { version = "0.6.3", default-features = false }
key-rwlock = { version = "0.1.2", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
poem = { version = "3.0.0", default-features = false, features = ["server", "anyhow"] }
poem-ext = { version = "0.11.0", default-features = false, features = ["shield"] }
poem-openapi = { version = "4.0.0", default-features = false, features = ["swagger-ui", "redoc", "uuid"] }
postcard = { version = "1.0.8", default-features = false, features = ["use-std"] }
prometheus = { version = "0.13.3", default-features = false }
redis = { version = "0.25.2", default-features = false, features = ["tokio-comp", "connection-manager"] }
regex = "1.10.4"
sandkasten-client = { path = "client", default-features = false, features = ["poem-openapi"] }
serde.workspace = true
serde_json.workspace = true
sha2 = { version = "0.10.8", default-features = false }
thiserror.workspace = true
tokio = { version = "1.37.0", default-features = false, features = ["rt-multi-thread", "macros", "process", "time"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi"] }
url = { version = "2.5.0", default-features = false, features = ["serde"] }
uuid.workspace = true

[dev-dependencies]
indoc = { version = "2.0.5", default-features = false }
proptest = "1.4.0"
sandkasten-client = { path = "client", default-features = false, features = ["reqwest", "blocking"] }

[features]
nix = []
test_api = []
