[package]
name = "sandkasten-client"
version = "0.0.3"
description = "Sandkasten client library for running untrusted code"
license = "MIT"
documentation = "https://docs.rs/sandkasten-client/"
repository = "https://github.com/Defelo/sandkasten"
readme = "../README.md"
edition = "2021"
rust-version = "1.64.0"
publish = true

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest", "dep:url"]
blocking = ["reqwest", "reqwest/blocking"]
poem-openapi = ["dep:poem-openapi"]

[dependencies]
poem-openapi = { version = "2.0.26", default-features = false, optional = true, features = ["uuid"] }
reqwest = { version = "0.11.17", default-features = false, optional = true, features = ["json", "rustls-tls"] }
serde.workspace = true
thiserror.workspace = true
url = { version = "2.3.1", default-features = false, optional = true }
uuid.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
