[package]
name = "sandkasten-client"
version = "0.1.7"
description = "Sandkasten client library for running untrusted code"
license = "MIT"
documentation = "https://docs.rs/sandkasten-client/"
repository = "https://github.com/Defelo/sandkasten"
edition = "2021"
rust-version = "1.64.0"
publish = true

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest", "dep:url"]
blocking = ["reqwest", "reqwest/blocking"]
poem-openapi = ["dep:poem-openapi"]

[dependencies]
poem-openapi = { version = "3.0.6", default-features = false, optional = true, features = ["uuid"] }
reqwest = { version = "0.11.22", default-features = false, optional = true, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url = { version = "2.5.0", default-features = false, optional = true }
uuid.workspace = true

[dev-dependencies]
tokio = { version = "1.35.0", default-features = false, features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
